--- a/alembic.ini
+++ b/alembic.ini
@@ -2,7 +2,34 @@
 # path to migration scripts
 script_location = alembic
 
-# Logging configuration
+# template used to generate migration files
+# file_template = %%(rev)s_%%(slug)s
+
+# sys.path path, will be prepended to sys.path if present.
+# defaults to the current working directory.
+prepend_sys_path = .
+
+# timezone to use when rendering the date within the migration file
+# as well as the filename.
+# string value is passed to dateutil.tz.gettz()
+# leave blank for default local
+# timezone =
+
+# max_overflow = 10
+# pool_recycle = 3600
+
+[post_write_hooks]
+# post_write_hooks defines scripts or Python functions that are run
+# on newly generated revision scripts.  See the documentation for further
+# detail and examples
+
+# format using "black" - use the console_scripts runner, against the "black" entrypoint
+# hooks = black
+# black.type = console_scripts
+# black.entrypoint = black
+# black.options = -l 79 REVISION_SCRIPT_FILENAME
+
+# logging configuration
 [loggers]
 keys = root,sqlalchemy,alembic
 
