--- a/logging.ini
+++ b/logging.ini
@@ -1,31 +1,22 @@
-###
-# logging configuration
-# http://docs.pylonsproject.org/projects/pyramid/en/1.5-branch/narr/logging.html
-###
 [loggers]
-keys = root, app
+keys=root
 
 [handlers]
-keys = console
+keys=consoleHandler
 
 [formatters]
-keys = generic
+keys=simpleFormatter
 
 [logger_root]
-level = WARN
-handlers = console
+level=INFO
+handlers=consoleHandler
 
-[logger_app]
-level = DEBUG
-handlers = console
-qualname = app
-propagate = 0
+[handler_consoleHandler]
+class=StreamHandler
+level=INFO
+formatter=simpleFormatter
+args=(sys.stdout,)
 
-[handler_console]
-class = StreamHandler
-level = NOTSET
-args = (sys.stderr,)
-formatter = generic
-
-[formatter_generic]
-format = %(levelname)-10.10s %(asctime)s [%(name)s][%(module)s:%(lineno)d] %(message)s
+[formatter_simpleFormatter]
+format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+datefmt=
