--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -10,7 +10,7 @@ dnspython>=2.1.0
 docstring-parser>=0.7.3
 email-validator>=1.1.2
 Faker>=7.0.0
-fastapi>=0.85.0
+fastapi>=0.85.0,<0.100.0
 FastAPI-SQLAlchemy>=0.2.1
 greenlet>=1.0.0
 h11>=0.12.0
