--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-SQL_DATABASE_URL=postgresql://postgres:postgres@localhost:5333/postgres
+SQL_DATABASE_URL=postgresql://postgres:postgres@localhost:5333/memotion_db
 PROJECT_NAME=Memotion
 SECRET_KEY=supersecretkey
