--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,28 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - memotion-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  backend:
+    build: .
+    container_name: memotion-backend
+    ports:
+      - "8005:8005"
+    environment:
+      - PROJECT_NAME=Memotion
+      - SQL_DATABASE_URL=postgresql://postgres:postgres@db:5432/memotion_db
+      - SECRET_KEY=changeme
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./static:/app/static
+    networks:
+      - memotion-network
 
 volumes:
   postgres_data:
