--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - "8005:8005"
     environment:
       - PROJECT_NAME=Memotion
-      - SQL_DATABASE_URL=postgresql://postgres:postgres@db:5432/memotion_db
+      - SQL_DATABASE_URL=postgresql://postgres:postgres@memotion-db:5432/memotion_db
       - SECRET_KEY=changeme
     depends_on:
       db:
