--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -62,5 +62,6 @@ jobs:
               -e SQL_DATABASE_URL="postgresql://postgres:postgres@host.docker.internal:5333/memotion_db" \
               -e SECRET_KEY="changeme" \
               -e PROJECT_NAME="Memotion" \
+              -v /home/hieuvu/static:/app/static \
               -p 8005:8005 ${DOCKER_IMAGE}
           EOF
