--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -19,9 +19,9 @@ importlib-metadata>=5.0.0
 iniconfig>=1.1.1
 Mako>=1.1.4
 MarkupSafe>=1.1.1
-numpy>=1.21.6
+numpy>=1.24.3
 packaging>=20.9
-pandas>=1.3.5
+pandas>=2.0.0
 passlib>=1.7.4
 pluggy>=0.13.1
 psycopg2-binary>=2.9.4
@@ -30,13 +30,14 @@ pycparser>=2.20
 pydantic>=1.10.2,<2.0.0
 PyJWT>=2.0.1
 pyparsing>=2.4.7
-pytest>=6.2.2
+pytest>=7.4.0
 python-dateutil>=2.8.1
 python-dotenv>=0.15.0
 python-editor>=1.0.4
 python-multipart>=0.0.5
 pytz>=2022.4
 requests>=2.25.1
+scipy>=1.11.3
 six>=1.15.0
 sniffio>=1.3.0
 SQLAlchemy>=1.4.3,<2.0.0
@@ -48,4 +49,13 @@ urllib3>=1.26.4
 uvicorn>=0.13.4
 zipp>=3.9.0
 google-generativeai>=0.3.0
+# Pose Detection dependencies
+opencv-python==4.8.1.78
+mediapipe==0.10.14
+websockets==11.0.3
+aiortc==1.6.0
+fastdtw>=0.3.4
+matplotlib>=3.7.0
+pytest-cov>=4.1.0
+mypy>=1.5.0
 Pillow>=9.0.0
