--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-SQL_DATABASE_URL=postgresql://postgres:postgres@localhost:5333/memotion_db
+SQL_DATABASE_URL=postgresql://postgres:motconga@localhost:5432/postgres
 PROJECT_NAME=Memotion
 SECRET_KEY=supersecretkey
+GEMINI_API_KEY=AIzaSyD11LgE63KVM7disJ-at9cYKYnKuduKfj4
