--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -20,6 +20,9 @@ iniconfig>=1.1.1
 Mako>=1.1.4
 MarkupSafe>=1.1.1
 numpy>=1.24.3
+opencv-python>=4.8.0
+mediapipe>=0.10.0
+Pillow>=9.0.0
 packaging>=20.9
 pandas>=2.0.0
 passlib>=1.7.4
@@ -49,11 +52,11 @@ urllib3>=1.26.4
 uvicorn>=0.13.4
 zipp>=3.9.0
 google-generativeai>=0.3.0
-# Pose Detection dependencies
-opencv-python==4.8.1.78
-mediapipe==0.10.30
-websockets==11.0.3
-aiortc==1.6.0
+opencv-python>=4.8.0
+mediapipe>=0.10.0
+Pillow>=9.0.0
+websockets>=11.0.0
+aiortc>=1.6.0
 fastdtw>=0.3.4
 matplotlib>=3.7.0
 pytest-cov>=4.1.0
